<resources>
    <string name="app_name">Nhà yến</string>

    <!--Common-->
    <string name="application_touch_twice_to_exits">Nhấn BACK một lần nữa để thoát!</string>
    <string name="have_no_internet">Vui lòng kiểm tra lại kết nối mạng</string>
    <string name="save">Lưu</string>
    <string name="cancel">Hủy</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="enter_enough_infomation">Vui lòng nhập đủ thông tin</string>
    <string name="notification">Thông báo</string>
    <string name="higher">Cao hơn</string>
    <string name="between">Trong khoảng</string>
    <string name="lower">Thấp hơn</string>
    <string name="done">Xong</string>
    <string name="error">Đã có lỗi xảy ra. Xin vui lòng thử lại</string>

    <!--Device-->
    <string name="light">Bóng đèn</string>
    <string name="pump">Máy bơm</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="day">Ngày</string>
    <string name="month">Tháng</string>

    <!--Login Activity-->
    <string name="login_activity_hint_edt_username">Tài khoản</string>
    <string name="login_activity_hint_edt_password">Mật khẩu</string>
    <string name="login_activity_button_login">Đăng nhập</string>
    <string name="login_activity_please_enter_username_and_pass">Vui lòng nhập tài khoản và mật khẩu</string>
    <string name="login_activity_please_enter_username">Vui lòng nhập tài khoản</string>
    <string name="login_activity_please_enter_pass">Vui lòng nhập mật khẩu</string>
    <string name="login_activity_user_invalid">Tài khoản không hợp lệ</string>

    <!--Main Activity-->
    <string name="main_activity_welcome_home">Welcome home!</string>
    <string name="main_activity_textview_celsius_unit">%.1f°C</string>
    <string name="main_activity_textview_percent_humi">%.1f</string>
    <string name="main_activity_textview_temperature">Nhiệt độ</string>
    <string name="main_activity_textview_humidity">Độ ẩm</string>
    <string name="main_activity_textview_state_device">Trạng thái thiết bị</string>
    <string name="main_activity_textview_option">Tùy chọn</string>
    <string name="main_activity_textview_chart">Đồ thị</string>
    <string name="main_activity_textview_threshold_setting">Cài đặt ngưỡng</string>

    <!--User Info Activity-->
    <string name="user_info_activity_title_toolbar">Thông tin tài khoản</string>
    <string name="user_info_activity_textview_student">Sinh viên:</string>
    <string name="user_info_activity_textview_teacher">GVHD:</string>
    <string name="user_info_activity_textview_lab">Lab:</string>
    <string name="user_info_activity_textview_contact">Liên lạc:</string>
    <string name="user_info_activity_textview_logout">Đăng xuất</string>
    <string name="user_info_activity_textview_change_pass">Thay đổi mật khẩu</string>
    <string name="user_info_activity_message_dialog_confirm_logout">Bạn có chắc chắn muốn đăng xuất?</string>

    <!--Change Password Fragment-->
    <string name="change_pass_fragment_title_toolbar_change_pass">Đổi mật khẩu</string>
    <string name="change_pass_fragment_hint_old_pass">Mật khẩu cũ</string>
    <string name="change_pass_fragment_old_pass_incorrect">Mật khẩu cũ không đúng</string>
    <string name="change_pass_fragment_hint_new_pass">Mật khẩu mới</string>
    <string name="change_pass_fragment_hint_enter_new_pass_again">Nhập lại mật khẩu mới</string>
    <string name="change_pass_fragment_new_pass_not_match">Mật khẩu mới không khớp</string>
    <string name="change_pass_fragment_update_pass_success">Cập nhật mật khẩu thành công</string>

    <!--User Info Activity-->
    <string name="chart_activity_title_toolbar">Đồ thị</string>

    <!--Setting Activity-->
    <string name="setting_activity_title_toolbar">Cấu hình ngưỡng</string>
    <string name="main_activity_text_spinner_temperature">Nhiệt độ (đơn vị: °C)</string>
    <string name="main_activity_text_spinner_humidity">Độ ẩm (đơn vị: %)</string>
    <string name="main_activity_text_input_condition">Điều kiện đầu vào</string>
    <string name="main_activity_text_output_condition">Điều kiện đầu ra</string>
    <string name="main_activity_text_not_select_input_condition">Bạn chưa chọn điều kiện đầu vào</string>
    <string name="main_activity_text_not_select_output_condition">Bạn chưa chọn điều kiện đầu ra</string>
    <string name="main_activity_text_not_suitable_threshold">Ngưỡng không phù hợp</string>
    <string name="main_activity_text_set_threshold_success">Cài đặt ngưỡng thành công</string>
    <string name="main_activity_text_set_threshold_failed">Cài đặt ngưỡng thất bại</string>

    <!--Chart Activity-->
    <string name="chart_activity_textview_day_data">Dữ liệu ngày:</string>
    <string name="chart_activity_textview_month_data">Dữ liệu tháng:</string>
    <string name="chart_activity_label_chart">Đồ thị nhiệt độ, độ ẩm</string>
    <string name="chart_activity_data_tem_empty">Không có dữ liệu đồ thị của nhiệt độ</string>
    <string name="chart_activity_data_humi_empty">Không có dữ liệu đồ thị của độ ẩm</string>
    <string name="chart_activity_data_chart_empty">Không có dữ liệu đồ thị</string>

</resources>