<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/custom_toolbar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semi_bold"
            android:text="@string/change_pass_fragment_title_toolbar_change_pass"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/edt_old_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_edit_text"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/change_pass_fragment_hint_old_pass"
        android:paddingStart="22dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/custom_toolbar" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/edt_new_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_edit_text"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/change_pass_fragment_hint_new_pass"
        android:paddingStart="22dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edt_old_pass" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/edt_new_pass_again"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_edit_text"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/change_pass_fragment_hint_enter_new_pass_again"
        android:paddingStart="22dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edt_new_pass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        style="@style/ButtonGreen"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@id/edt_new_pass_again"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_cancel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        style="@style/ButtonWhite"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"
        android:text="@string/cancel"
        android:textColor="@color/green_dark"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintStart_toStartOf="@id/edt_new_pass_again"
        app:layout_constraintTop_toBottomOf="@id/edt_new_pass_again" />

</androidx.constraintlayout.widget.ConstraintLayout>