<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.login.ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/hust_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_edit_text"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="15dp"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/login_activity_hint_edt_username"
            android:paddingStart="18dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_edit_text"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="15dp"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/login_activity_hint_edt_password"
            android:inputType="textPassword"
            android:paddingStart="18dp"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/ButtonRed"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="18dp"
            android:text="@string/login_activity_button_login" />

    </LinearLayout>

</RelativeLayout>