<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.chart.ui.ChartActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/custom_toolbar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semi_bold"
            android:text="@string/chart_activity_title_toolbar"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_date"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="5dp"
        app:cardCornerRadius="13dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/custom_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_label_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/opensans_semi_bold"
                android:gravity="center_vertical"
                android:text="@string/chart_activity_textview_day_data"
                android:textColor="@color/dark_blue"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/tv_label_date"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_vertical"
                android:textColor="@color/dark_blue"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="15dp"
                android:background="@drawable/background_iv_calendar"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:src="@drawable/ic_calendar" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        app:cardCornerRadius="13dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_date">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green_light"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_label_chart"
                android:text="@string/chart_activity_label_chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/dark_blue"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_no_data"
                android:text="@string/chart_activity_data_chart_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/tv_label_tem"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/tv_label_chart"
                android:fontFamily="@font/opensans_semi_bold"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lc_line_chart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toTopOf="@id/tv_label_tem"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_chart" />

            <TextView
                android:id="@+id/tv_day"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/selector_textview_chart"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@id/tv_month"
                android:text="@string/day"
                android:textColor="@color/dark_blue"
                android:textSize="13sp"
                app:layout_constraintTop_toTopOf="@id/tv_label_tem"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_humi"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:background="@drawable/selector_textview_chart"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/month"
                android:textColor="@color/dark_blue"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@id/tv_label_tem"
                app:layout_constraintStart_toEndOf="@id/tv_day"
                app:layout_constraintTop_toTopOf="@id/tv_day"
                app:layout_constraintBottom_toBottomOf="@id/tv_day"/>

            <TextView
                android:id="@+id/tv_label_tem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/main_activity_textview_temperature"
                android:textColor="@color/dark_blue"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@id/tv_label_humi"
                android:layout_marginBottom="5dp"
                app:layout_constraintEnd_toStartOf="@id/view_line_humi" />

            <View
                android:id="@+id/view_line_temperature"
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/red_light"
                app:layout_constraintTop_toTopOf="@id/tv_label_tem"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_tem"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_label_humi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/main_activity_textview_humidity"
                android:textColor="@color/dark_blue"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/view_line_humi" />

            <View
                android:id="@+id/view_line_humi"
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@color/light_blue_2"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_humi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_label_humi" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>