<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.userinfo.ui.UserInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/custom_toolbar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_label_device_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semi_bold"
            android:text="@string/user_info_activity_title_toolbar"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_userinfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="13dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center"
                        android:id="@+id/iv_user"
                        android:layout_width="105dp"
                        android:layout_height="105dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_user_bg" />

                    <RelativeLayout
                        android:layout_marginTop="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:fontFamily="@font/opensans_semi_bold"
                            android:text="@string/user_info_activity_textview_student"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_student_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="15dp"
                            android:fontFamily="@font/opensans_regular"
                            android:text="Dương Thị Thu Hồng"
                            android:textColor="@color/grey_light_text"
                            android:textSize="16sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:fontFamily="@font/opensans_semi_bold"
                            android:text="@string/user_info_activity_textview_teacher"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_teacher_name"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:fontFamily="@font/opensans_regular"
                            android:text="PGS.TS Trần Quang Vinh"
                            android:textColor="@color/grey_light_text"
                            android:textSize="16sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:fontFamily="@font/opensans_semi_bold"
                            android:text="@string/user_info_activity_textview_lab"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_lab_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="15dp"
                            android:fontFamily="@font/opensans_regular"
                            android:text="SANSLAB"
                            android:textColor="@color/grey_light_text"
                            android:textSize="16sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:fontFamily="@font/opensans_semi_bold"
                            android:text="@string/user_info_activity_textview_contact"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_contact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="15dp"
                            android:fontFamily="@font/opensans_regular"
                            android:text="duongduong0201@gmail.com"
                            android:textColor="@color/grey_light_text"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_option"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="13dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_userinfo">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:fontFamily="@font/opensans_regular"
                            android:text="@string/user_info_activity_textview_change_pass"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_arrow_right" />

                    </RelativeLayout>

                    <View
                        android:id="@+id/line_5"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/grey_light_text" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:fontFamily="@font/opensans_regular"
                            android:text="@string/user_info_activity_textview_logout"
                            android:textColor="@color/red_light"
                            android:textSize="16sp" />

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>